// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: branches not enabled 1`] = `
<Fragment>
  <div
    className="page-header big-spacer-bottom"
  >
    <h2
      className="page-title"
    >
      onboarding.tutorial.with.jenkins.title
    </h2>
  </div>
  <PreRequisitesStep
    alm="bitbucket"
    branchesEnabled={false}
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={true}
  />
  <PipelineStep
    alm="bitbucket"
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
  />
  <WebhookStep
    alm="bitbucket"
    branchesEnabled={false}
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
    projectBinding={
      {
        "alm": "bitbucket",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
        "slug": "repo-slug",
      }
    }
  />
  <withCLanguageFeature(JenkinsfileStep)
    baseUrl=""
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
  />
  <AllSetStep
    alm="bitbucket"
    open={false}
    stepNumber={4}
    willRefreshAutomatically={true}
  />
</Fragment>
`;

exports[`should render correctly: default 1`] = `
<Fragment>
  <div
    className="page-header big-spacer-bottom"
  >
    <h2
      className="page-title"
    >
      onboarding.tutorial.with.jenkins.title
    </h2>
  </div>
  <PreRequisitesStep
    alm="bitbucket"
    branchesEnabled={true}
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={true}
  />
  <MultiBranchPipelineStep
    alm="bitbucket"
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
    projectBinding={
      {
        "alm": "bitbucket",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
        "slug": "repo-slug",
      }
    }
  />
  <WebhookStep
    alm="bitbucket"
    branchesEnabled={true}
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
    projectBinding={
      {
        "alm": "bitbucket",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
        "slug": "repo-slug",
      }
    }
  />
  <withCLanguageFeature(JenkinsfileStep)
    baseUrl=""
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
  />
  <AllSetStep
    alm="bitbucket"
    open={false}
    stepNumber={4}
    willRefreshAutomatically={true}
  />
</Fragment>
`;

exports[`should render correctly: no project binding 1`] = `
<Fragment>
  <div
    className="page-header big-spacer-bottom"
  >
    <h2
      className="page-title"
    >
      onboarding.tutorial.with.jenkins.title
    </h2>
  </div>
  <SelectAlmStep
    onCheck={[Function]}
    onOpen={[Function]}
    open={true}
  />
</Fragment>
`;
